update username from skale-eng to variable

--- a/src/content/docs/run-a-skale-node/run-sync-node.mdx
+++ b/src/content/docs/run-a-skale-node/run-sync-node.mdx
@@ -472,7 +472,7 @@ Choose your deployment scenario based on your infrastructure setup:
       -d '{"jsonrpc":"2.0","method":"eth_blockNumber","params":[],"id":1}'
     
     # Test SSH access
-    ssh skale-eng@ssh.yourdomain.com
+    ssh {USERNAME_HERE}@ssh.yourdomain.com
     ```
 
 </Steps>
