--- a/src/content/docs/building-applications/random-number-generation.mdx
+++ b/src/content/docs/building-applications/random-number-generation.mdx
@@ -5,7 +5,7 @@ description: Learn about using random number generation (RNG) on SKALE
 
 import { Steps, Aside } from "@astrojs/starlight/components";
 
-Ranodm number generation (RNG), also commonly known as verifiable random functions (VRF) within blockchain; is a common tool used by developers of financial, gaming, social, and creative applications. Blockchains are known for traditionally being unable to generate provably random values due to the lack of shared rng values (i.e getting a random number at some point in time).
+Random number generation (RNG), also commonly known as verifiable random functions (VRF) within blockchain; is a common tool used by developers of financial, gaming, social, and creative applications. Blockchains are known for traditionally being unable to generate provably random values due to the lack of shared rng values (i.e getting a random number at some point in time).
 
 SKALE has solved this problem of random number generation nativley available within a blockchain thanks to the use of BLS threshold encyption.
 Every SKALE Chain includes a built-in random number generation feature that allows for a unique value to be derived from the chains threshold
