--- a/src/content/docs/run-a-skale-chain/intro-to-schains.mdx
+++ b/src/content/docs/run-a-skale-chain/intro-to-schains.mdx
@@ -6,7 +6,7 @@ prev: false
 
 The SKALE Network is home to a unique type of decentralized and distributed compute system known as a SKALE Chain. Uniquely designed to offer both permissioned and permisionless compute; sChains are themselves are Layer 1 blockchains with additional layers of modular management and functionality enabling them to exist as an Appchain or as an ecosystem chain like a hub.
 
-When a new SKALE Chain is created, the owner of the chain is provided elevated privledges which they can use to setup the chain to their unique needs. Privledges can be provided to others, secured via multisigs, or renounced entirely. This section of the documentation explores a variety of critical operations that should be taken when a new SKALE Chain is created.
+When a new SKALE Chain is created, the owner of the chain is provided elevated privileges which they can use to setup the chain to their unique needs. Privileges can be provided to others, secured via multisigs, or renounced entirely. This section of the documentation explores a variety of critical operations that should be taken when a new SKALE Chain is created.
 
 ## SKALE Chain Setup Guide
 
